# MarcelEnglmaierCollege

./: ReadMe.txt
Year 1/Semester 1/IME 1020/: Career Report.doc  Employment Letter.doc  Memo outline.doc  Technical Journal analysis.doc
Year 1/Semester 2/CS 1120/: CS1120 In Class - [01] - RecursionDemo.java  CS1120 In Class - [02] - Autogui.java  CS1120 In Class - [03x01] - Inlabpractice.java  CS1120 In Class - [03x02] - speakthouknowledge.java  CS1120 In Class - [03x03] - speakthouknowledge.form  CS1120 In Class - [03x04] - Talkative.java  CS1120 In Class - [03x05] - Human.java  CS1120 In Class - [03x06] - Dog.java  CS1120 In Class - [03x07] - DialUpModem.java  CS1120 In Class - [04x01] - Main.java  CS1120 In Class - [04x02] - StudentOrganization.java  CS1120 In Class - [04x03] - ComputerClub.java  CS1120 In Class - [04x04] - CheerTeam.java  CS1120 Lab - [01x01] - LA1_Englmaier.java  CS1120 Lab - [01x02] - MultipleChoiceExam.java  CS1120 Lab - [01x03] - LA1 SLC Report.doc  CS1120 Lab - [02x01] - TreasureHunt.java  CS1120 Lab - [02x02] - LA2 SLC Report.doc  CS1120 Lab - [03x01] - La3_Englmaier.java  CS1120 Lab - [03x02] - LibraryItems.java  CS1120 Lab - [03x03] - Periodical.java  CS1120 Lab - [03x04] - Book.java  CS1120 Lab - [03x05] - NewJFrame.java  CS1120 Lab - [03x06] - NewJFrame.form  CS1120 Lab - [03x07] - LibraryItems.java  CS1120 Lab - [03x08] - Periodical.java  CS1120 Lab - [03x09] - Book.java  CS1120 Lab - [03x10] - la3_englmaier SLC.doc  (+21 more)
Year 2/Semester 4/CS2240/assignment5-Ringbuffer/tests/: CMakeLists.txt  test-create.c  test-read.c  test-write.c
(+778 files in other folders)
